[gd_scene load_steps=11 format=3 uid="uid://ini6nttf21fu"]

[ext_resource type="Script" path="res://Scripts/level_detail.gd" id="1_mld70"]
[ext_resource type="Texture2D" uid="uid://bq48n4gmwkxjq" path="res://Assets/Level Previews/chapter1_level1.png" id="1_nawop"]
[ext_resource type="Theme" uid="uid://ccnrsiokt1v12" path="res://Resources/Themes/Buttons/green_button_theme.tres" id="2_qy3ny"]
[ext_resource type="Theme" uid="uid://b301ebbakbkh2" path="res://Resources/Themes/Buttons/red_button_theme.tres" id="4_ah0uu"]
[ext_resource type="Texture2D" uid="uid://p5rduqvsp77i" path="res://Assets/UI Icons/cross.png" id="5_fvthj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ek1g"]
bg_color = Color(0.158, 0.158, 0.158, 0.681)

[sub_resource type="Animation" id="Animation_eh20u"]
resource_name = "enter"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yg7ab"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bguek"]
resource_name = "exit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0.6, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ifkn"]
_data = {
"RESET": SubResource("Animation_yg7ab"),
"enter": SubResource("Animation_eh20u"),
"exit": SubResource("Animation_bguek")
}

[node name="LevelDetail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mld70")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ek1g")

[node name="Main" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 64.0
offset_right = -128.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(512, 296)

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 59

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="LevelImage" type="TextureRect" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(384, 216)
layout_mode = 2
texture = ExtResource("1_nawop")
expand_mode = 1

[node name="LevelName" type="Label" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 405.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 40
text = "Clear Reward:"

[node name="Rewards" type="GridContainer" parent="Main/VBoxContainer/HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 128.0
offset_right = 480.0
offset_bottom = 384.0
columns = 6

[node name="Button" type="Button" parent="Main/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_qy3ny")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Control2" type="Control" parent="Main/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 0
theme = ExtResource("4_ah0uu")
icon = ExtResource("5_fvthj")
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ifkn")
}

[connection signal="pressed" from="Main/CloseButton" to="." method="_on_close_button_pressed"]
